2013-02-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (GetCacheNexus): Re-write function so it
	has a single point of return.
	(AcquireCacheNexus): Reduce the number of return points.
	(SetCacheNexus): Re-write function so it has a single point of
	return.

2013-02-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update with latest news.

	* magick/export.c (ExportAlphaQuantumType): Fix export of alpha
	for RGBA image and depth 8.  Due to typo, was exporting 16-bits
	rather than 8, causing output corruption or crashes.  Resolves
	issue reported in SourceForge GraphicsMagick forum under title
	"CMYK per-channel byte order TIFF crashes gm".

2013-02-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/studio.h (MagickIsBlank): Add macro to substitute for ISO
	C99 isblank() which is not globally available.  Update 'gm batch'
	code which had substituted isspace() for isblank() to use it.

2013-01-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (BatchCommand): Flush stdout at key points in
	order to ensure that user sees text when it is produced.

2013-01-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/random.c (InitializeMagickRandomGenerator): Use
	MagickTsdKeyCreate2() in order to avoid a small memory leak.

	* magick/tsd.c (MagickTsdKeyCreate2): New private function to
	support allocating a thread-specific data key with a specified
	destructor function.  For single-threaded build, MagickTsdKey_t is
	now type void* and there is provision to support the destructor
	function.

2013-01-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (BatchCommand): New 'gm batch' command to
	accept one or more GraphicsMagick commands from a specified text
	file, standard input, or CLI.  Feature is implemented by Kenneth
	Xu.  Submitted via SourceForge Patch #3602331 "Add interactive or
	batch mode support to 1.3.17".
