@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020130210"
-#define public MagickPackageReleaseDate "snapshot-20130210"
+#define public MagickPackageVersionAddendum ".020130213"
+#define public MagickPackageReleaseDate "snapshot-20130213"
